--- a/src/views/pages/admin/scm-setup/scm-setup.njk
+++ b/src/views/pages/admin/scm-setup/scm-setup.njk
@@ -74,6 +74,12 @@
         </p>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-12 text-center">
+        <h5><a href="/admin/dev-env" class="kbl-link">Next Part: Development Environment</a></h5>
+      </div>
+    </div>
   </div>
 
   {% include "universal/_footer.njk" %}
