--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -32,9 +32,9 @@
       <div class="container">
         {% from './_functions.njk' import selector, activeCheck %}
         <section class="row justify-content-center my-5">
-          {{ selector("2013") }}
-          {{ selector("2018") }}
           {{ selector("2019") }}
+          {{ selector("2018") }}
+          {{ selector("2013") }}
         </section>
           <div class="events_post-sagment tabcontent {{ activeCheck('2019') }}" id="20">
               <h4 class="sagment-title">2020</h4>
@@ -56,8 +56,8 @@
                           <div class="events-item-meta">
                               <div class="events-loc"><i class="ion-location"></i><span class="text">500 Hotel Circle N,
                                       San Diego, CA</span></div>
-                              <div class="events-date"><i class="ion-calendar"></i><span class="text">12<sup>th</sup>
-                                      Jan 2019</span></div>
+                              <div class="events-date"><i class="ion-calendar"></i><span class="text">11-15<sup>th</sup>
+                                      Jan 2020</span></div>
                           </div>
                       </article><!-- /.sabbi-events-item -->
                   </div>
