--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -36,7 +36,9 @@
               <div class="hn-date">Oct 8, 2019</div>
             </section>
 
-            <h6 class="kbl-heading pt-3 mt-auto">View All</h6>
+            <h6 class="kbl-heading pt-3 mt-auto">
+              <a class="kbl-link dull" href="/news">View All</a>
+            </h6>
           </div>
         </div>
 
@@ -65,21 +67,28 @@
             <h5 class="kbl-heading pb-2">Latest Events:</h5>
 
             <section class="home-news-item py-2">
-              <a class="hn-header" href="http://bioinfo.usu.edu/covidTracker/">PSC Showcase</a>
+              <a class="hn-header" href="/events/winter">Utah State University Winter</a>
+              <div class="hn-date">December 1, 2019</div>
+            </section>
+
+            <section class="home-news-item py-2">
+              <a class="hn-header" href="/events/cricket">Cricket in Utah</a>
+              <div class="hn-date">July 13, 2019</div>
+            </section>
+
+            <section class="home-news-item py-2">
+              <a class="hn-header" href="/events/psc">PSC Showcase</a>
               <div class="hn-date">March 23, 2019</div>
             </section>
 
             <section class="home-news-item py-2">
-              <a class="hn-header" href="/events">Rocky Bioinformatics Conference</a>
-              <div class="hn-date">December 5-7, 2018</div>
+              <a class="hn-header" href="/pag">Plant Animal Genome Conference</a>
+              <div class="hn-date">Jan 12, 2019</div>
             </section>
 
-            <section class="home-news-item py-2">
-              <a class="hn-header" href="/events">Won President's Cup at OSU</a>
-              <div class="hn-date">December 10, 2013</div>
-            </section>
-
-            <h6 class="kbl-heading pt-3 mt-auto">View All</h6>
+            <h6 class="kbl-heading pt-3 mt-auto">
+              <a class="kbl-link dull" href="/events">View All</a>
+            </h6>
           </div>
         </div>
       </section>
