--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -60,7 +60,7 @@
       {type: "researchgate", link: "https://www.researchgate.net/profile/Naveen_Duhan"},
       {type: "facebook", link: "https://www.facebook.com/navduhan87/"},
       {type: "twitter", link: "https://twitter.com/navduhan"},
-      {type: "website", link: "naveenduhan.com"}
+      {type: "website", link: "http://naveenduahn.com"}
     ]
   }
 %}
