--- a/src/views/pages/research/research-areas/research-areas.njk
+++ b/src/views/pages/research/research-areas/research-areas.njk
@@ -31,7 +31,7 @@
         <h1><ion-icon name="library-outline" class="kbl-header-icon"></ion-icon></h1>
       </div>
       <div class="col-auto pt-3 header-icon-wrapper text-left">
-        <h1>Research Articles</h1>
+        <h1>Research Areas</h1>
         <h6>
           Results from our lab
         </h6>
@@ -39,7 +39,7 @@
     </div>
   </article>
 
-  <article class="container-fluid mt-5">
+  <article class="container mt-5">
     <div class="row justify-content-center">
       {% from './articles.njk' import research %}
       {% from "components/article-link.njk" import articleLink %}
