--- a/src/views/pages/research/research.njk
+++ b/src/views/pages/research/research.njk
@@ -36,11 +36,13 @@
               <div class="row">
                   <div class="col-sm-5 col-md-4">
                       <div class="page_piky-title">
-                          <h2 class="page-title font-md lil-line">Dr. Kaundal's research: <i>information to inference</i> in OMICS data science</h2>
+                          <h2 class="page-title font-md lil-line kbl-heading">
+                            Dr. Kaundal's research: <i>information to inference</i> in OMICS data science
+                          </h2>
                       </div>
                   </div>
                   <div class="col-sm-7 col-md-7 col-md-offset-1">
-                      <p class="page_piky-text">
+                      <p class="page_piky-text kbl-text">
                         Biological data is accumulating faster than people’s capacity to analyze them. Our research interests and goals revolve
                         around mitigating this issue in the context of “<i>information to inference</i>” scope. At USU, Dr. Kaundal has developed an <b>independent</b> and <b>collaborative</b>
                         research program in bioinformatics, primarily focusing on computational mining of large multi-dimensional -<i>omics</i> datasets, and computational modeling using
@@ -56,7 +58,7 @@
             </div>
           </section>
           <!-- /.icon-card-segment -->
-          <section class="sabbi-section stage-samevide mb_0">
+          <section class="sabbi-section stage-samevide mb_0 mt-5">
               <div class="row">
                   <div class="col-sm-6">
                       <ul class="list-unstyled entry-meta-list list-style-round_item">
