--- a/src/views/universal/_navbar.njk
+++ b/src/views/universal/_navbar.njk
@@ -7,7 +7,7 @@
     <section class="row px-5 w-100 mb-1">
 
       <div class="col-4 pl-5">
-        <a class="navbar-brand d-inline" href="#">
+        <a class="navbar-brand d-inline" href="/">
           <img src="/assets/img/kbllogo.png">
         </a>
       </div>
