--- a/src/views/pages/admin/admin.njk
+++ b/src/views/pages/admin/admin.njk
@@ -18,8 +18,8 @@
           the source control environment. If you have already done that, you can move on.
         </p>
 
-        <h5 class="kbl-heading"><a href="help/scm-setup" class="kbl-link">Part 1: Source Control Setup</a></h5>
-        <h5 class="kbl-heading"><a href="help/dev-env" class="kbl-link">Part 2: Dev Environment</a></h5>
+        <h5 class="kbl-heading"><a href="admin/scm-setup" class="kbl-link">Part 1: Source Control Setup</a></h5>
+        <h5 class="kbl-heading"><a href="admin/dev-env" class="kbl-link">Part 2: Dev Environment</a></h5>
       </div>
     </div>
   </div>
