--- a/src/views/pages/admin/dev-env/dev-env.njk
+++ b/src/views/pages/admin/dev-env/dev-env.njk
@@ -49,6 +49,12 @@
         </p>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-12 text-center">
+        <h5><a href="/admin/run-local" class="kbl-link">Next Part: Run Website Locally</a></h5>
+      </div>
+    </div>
   </div>
 
   {% include "universal/_footer.njk" %}
