--- a/src/views/pages/research/research-areas/articles.njk
+++ b/src/views/pages/research/research-areas/articles.njk
@@ -9,7 +9,7 @@
 {% set ai = {
     title: "Artificial Intelligence",
     subtitle: "OMICS big data to novel biological discoveries",
-    img: "",
+    img: "/assets/img/AI-processor-LowRes-v1.jpg",
     link: "ai"
   }
 %}
@@ -17,15 +17,15 @@
 {% set hpi = {
     title: "Host-pathogen Interactions",
     subtitle: "Understanding mechanisms of infectious diseases",
-    img: "",
+    img: "/assets/img/HPI_new.gif",
     link: "hpi"
   }
 %}
 
 {% set pfp = {
     title: "Protein Function Prediction",
-    subtitle: "Annotation of novel proteomes",
-    img: "",
+    subtitle: "Annotation of novel proteomes and their features",
+    img: "/assets/img/functionalbg_resized.png",
     link: "pfp"
   }
 %}
@@ -33,7 +33,7 @@
 {% set metagenomics = {
     title: "Metagenomics",
     subtitle: "Bioinformatics solutions for crop improvement",
-    img: "#",
+    img: "/assets/img/meta_new.png",
     link: "metagenomics"
   }
 %}
@@ -41,7 +41,7 @@
 {% set pa = {
     title: "Precision Agriculture",
     subtitle: "Robotics for integrated weed management",
-    img: "",
+    img: "/assets/img/sabbi-post/p_agr.jpg",
     link: "precisionag"
   }
 %}
@@ -49,7 +49,7 @@
 {% set ngs = {
     title: "NGS Studies",
     subtitle: "Deciphering and making sense of complex -omics big data",
-    img: "",
+    img: "/assets/img/datamining-lowres.png",
     link: "ngs"
   }
 %}
