--- a/src/views/universal/_footer.njk
+++ b/src/views/universal/_footer.njk
@@ -1,4 +1,4 @@
-<footer class="w-100 py-5">
+<footer class="w-100 py-5 mt-5">
   <div class="container">
     <div class="row">
       <section class="col-4 footer-section">
