--- a/src/views/universal/_navbar-options.njk
+++ b/src/views/universal/_navbar-options.njk
@@ -3,7 +3,7 @@
 {% set research = {
   name: "Research",
   options: [
-    {name: "Research Articles", link: "/research/research-articles"}
+    {name: "Research Areas", link: "/research/research-areas"}
   ],
   link: "/research"
   }
