Start tool page fix

--- a/src/scss/default/_anchor.scss
+++ b/src/scss/default/_anchor.scss
@@ -5,7 +5,7 @@ a.kbl-link {
   color: $color-primary!important;
   border-bottom: 1px solid rgba(#fff, 0)!important;
   text-decoration: none!important;
-  transition: $time-mid;
+  transition: $time-fast;
 
   &.thicc {
     font-weight: $font-weight-heavy!important;
