--- a/src/views/pages/home/the-team.njk
+++ b/src/views/pages/home/the-team.njk
@@ -85,7 +85,7 @@
             </div>
         </div>
         <div class="action-wrap text-left-sm">
-          <a href="/people/our-team" class="btn btn-unsolemn btn-action">View all</a>
+          <a href="/people/our-team" class="kbl-link dull"><b>View all</b></a>
         </div>
     </div>
 </section>
