--- a/src/views/pages/tools/tools.njk
+++ b/src/views/pages/tools/tools.njk
@@ -38,6 +38,15 @@
       </div>
   </div>
 -->
+  <article class="container">
+    {% from "./_tool-section.njk" import toolSection %}
+    {% from "./_tool-data.njk" import hpi, clpt, dbs %}
+
+    {{ toolSection("Host-Pathogen Interaction Prediction Tools", hpi) }}
+    {{ toolSection("Cellular Localization Prediction Tools", clpt) }}
+    {{ toolSection("Databases", dbs) }}
+  </article>
+
   <section class="sabbi-section stage_events_post">
   <div class="wrapper">
           <nav class="tabs">
