--- a/src/scss/components/_research-card.scss
+++ b/src/scss/components/_research-card.scss
@@ -38,6 +38,10 @@ $card-width: 250px;
   .img-wrapper {
     flex-basis: 200px;
   }
+
+  .img-tool {
+    flex-basis: 120px;
+  }
 }
 
 .kbl-research-card-container {
@@ -46,8 +50,24 @@ $card-width: 250px;
   width: $card-width;
 
   display: flex;
-  display: column;
   align-items: stretch;
+
+  .card-title {
+    transition: $time-mid;
+  }
+
+  &.tool {
+    transition: $time-mid;
+    border: 1px solid $color-border-gray;
+
+    &:hover {
+      border-color: $color-primary-very-light;
+
+      .card-title {
+        color: $color-primary;
+      }
+    }
+  }
 }
 
 .modal-img {
@@ -84,6 +104,21 @@ $card-width: 250px;
     border-bottom: 1px solid $transparent;
     transition: $time-mid;
     color: $color-text-main;
+    background: $transparent!important;
+
+    &:hover {
+      color: $color-primary;
+      border-color: $color-primary;
+    }
+  }
+
+  .read-text {
+    font-weight: $font-weight-medium;
+    cursor: pointer;
+    border-bottom: 1px solid $transparent;
+    transition: $time-mid;
+    color: $color-text-main;
+    background: $transparent!important;
 
     &:hover {
       color: $color-primary;
