--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -68,6 +68,29 @@
   }
 %}
 
+{% set lacSubPred = {
+    img: "/assets/img/tools/lacsubpred.PNG",
+    title: "LacSubPred",
+    link: "http://bioinfo.usu.edu/lacsubpred"
+  }
+%}
+
+{% set ligPred = {
+    img: "/assets/img/tools/ligpred.PNG",
+    title: "LigPred",
+    link: "http://bioinfo.usu.edu/ligpred"
+  }
+%}
+
+{% set rbPred = {
+    img: "/assets/img/tools/rbpred.PNG",
+    title: "RBPred",
+    link: "http://crdd.osdd.net/raghava/rbpred/"
+  }
+%}
+
 {% set hpi = [predhpi, apinet] %}
 {% set clpt = [plantmSubp, atSubP, rslPredP, plPred] %}
 {% set dbs = [greeningDB, citSATdb, legumeSSRdb] %}
+{% set bioenergy = [lacSubPred, ligPred] %}
+{% set misc = [rbPred] %}
