--- a/src/views/pages/tools/tools.njk
+++ b/src/views/pages/tools/tools.njk
@@ -38,306 +38,17 @@
       </div>
   </div>
 -->
-<!--
+
   <article class="container">
     {% from "./_tool-section.njk" import toolSection %}
-    {% from "./_tool-data.njk" import hpi, clpt, dbs %}
+    {% from "./_tool-data.njk" import hpi, clpt, dbs, bioenergy, misc %}
 
     {{ toolSection("Host-Pathogen Interaction Prediction Tools", hpi) }}
     {{ toolSection("Cellular Localization Prediction Tools", clpt) }}
     {{ toolSection("Databases", dbs) }}
+    {{ toolSection("Bioenergy", bioenergy) }}
+    {{ toolSection("Miscellaneous", misc) }}
   </article>
--->
-  <section class="sabbi-section stage_events_post">
-  <div class="wrapper">
-          <nav class="tabs">
-            <div class="selector"></div>
-            <a href="#tabcontent" class="active tablinks" onclick="openAllTools(event, 'HPI,CLP')"><i class="fab fa-superpowers"></i>All</a>
-            <a href="#tabcontent" class="tablinks" onclick="openTools(event, 'HPI')"><i class="fas fa-hand-rock"></i>HPI</a>
-            <a href="#tabcontent" class="tablinks" onclick="openTools(event, 'CLP')"><i class="fas fa-hand-rock"></i>Subcellular</a>
-            <a href="#tabcontent" class="tablinks" onclick="openTools(event, 'DB')"><i class="fas fa-bolt"></i>Databases</a>
-            <a href="#tabcontent" class="tablinks" onclick="openTools(event, 'Bio')"><i class="fas fa-burn"></i>Bioenergy</a>
-            <a href="#tabcontent" class="tablinks" onclick="openTools(event, 'Misc')"><i class="fas fa-burn"></i>Miscellaneous</a>
-          </nav>
-  </div>
-
-
-      <div class="container">
-          <div class="events_post-sagment tabcontent title-card" id="HPI" >
-              <header class="fancy-header">
-              <h4 class="" style="padding: 20px;">Host-Pathogen Interaction Prediction Tools</h4>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 100" preserveAspectRatio="none">
-                  <circle fill="white" cx="0" cy="100" r="100" />
-                  <circle fill="white" cx="200" cy="100" r="100" />
-                </svg>
-              </header>
-              <div class="row" style="padding: 20px;">
-
-                  <div class="col-sm-3  show-text-predhpi zoom">
-                          <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank" class="sabbi-events-link">
-
-                      <!-- <figcaption class="mask flex-center"> -->
-                      <article class="sabbi-events-item tools-container container article-container" style="width: 200px; height: 220px;">
-
-                              <figure >
-
-                                       <img class="sabbi-events-img img-responsive image" style=" height: 150px; padding-block-start: 20px;" src="assets/img/tools/predHpi.PNG" alt="thompson">
-                                      <h2 class="sabbi-events-title font-md__x">PredHPI</h2>
-                                      <div class="middle">
-                                              <div class="text">Details</div>
-                                      </div>
-                              </figure>
-
-
-                          <!-- <div class="events-item-meta">
-                              <div class="events-loc"><i class="ion-location"></i><span class="text">5005 Heavenly Village Way #2b, Lake Tahoe</span></div>
-                              <div class="events-date"><i class="ion-calendar"></i><span class="text">21st January 2017</span></div>
-                          </div> -->
-                      </article><!-- /.sabbi-events-item -->
-                  <!-- </figcaption> -->
-                          </a>
-              </div>
-                  <div class="col-sm-3 show-text-predhpi zoom">
-                          <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" class="sabbi-events-link">
-                          <article class="sabbi-events-item tools-container container article-container" style="width: 200px; height: 220px;">
-                                  <figure>
-                                      <img class="sabbi-events-img img-responsive" style=" height: 150px; padding-block-start: 20px;" src="assets/img/tools/api-net.PNG" alt="thompson">
-                                      <figcaption>
-                                          <h2 class="sabbi-events-title font-md__x">Ap-iNET</h2>
-                                          <div class="middle">
-                                                  <div class="text">Details</div>
-                                          </div>
-                                      </figcaption>
-                                  </figure>
-
-                          </article><!-- /.sabbi-events-item -->
-
-                          </a>
-                      </div>
-              </div>
-
-          </div><!-- /.events_post-sagment -->
-          <div class="events_post-sagment tabcontent title-card" id="CLP">
-                  <header class="fancy-header">
-              <h4 class="" style="padding: 20px;">Cellular Localization Prediction Tools</h4>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 100" preserveAspectRatio="none">
-                  <circle fill="white" cx="0" cy="100" r="100" />
-                  <circle fill="white" cx="200" cy="100" r="100" />
-                </svg>
-                </header>
-              <div class="row" style="padding: 20px;">
-                  <div class="col-sm-6 col-md-3 show-text-predhpi zoom" >
-                      <a href="http://bioinfo.usu.edu/Plant-mSubP" target="_blank" class="sabbi-events-link">
-                      <article class="sabbi-events-item tools-container container article-container" style="width: 200px; height: 220px;">
-
-                              <figure>
-                                  <img class="sabbi-events-img img-responsive" style=" height: 150px; padding-block-start: 20px;" src="assets/img/tools/plantmSubp.PNG" alt="thompson">
-                                  <figcaption>
-                                      <h2 class="sabbi-events-title font-md__x">Plant-mSubP</h2>
-                                      <div class="middle">
-                                              <div class="text">Details</div>
-                                      </div>
-                                  </figcaption>
-                              </figure>
-
-                      </article><!-- /.sabbi-events-item -->
-
-                  </a>
-                  </div>
-              <div class="col-sm-6 col-md-3 show-text-predhpi zoom">
-                      <a href="http://bioinfo.usu.edu/AtSubP" target="_blank" class="sabbi-events-link">
-                          <article class="sabbi-events-item tools-container container article-container" style="width: 200px; height: 220px;">
-                                  <figure>
-                                      <img class="sabbi-events-img img-responsive"  style=" height: 150px; padding-block-start: 20px;" src="http://bioinfo.usu.edu/wp-content/uploads/2019/03/atSubP-1.jpg" alt="thompson">
-                                      <figcaption>
-                                          <h2 class="sabbi-events-title font-md__x">AtSubP</h2>
-                                          <div class="middle">
-                                                  <div class="text">Details</div>
-                                          </div>
-                                      </figcaption>
-                                  </figure>
-
-                          </article><!-- /.sabbi-events-item -->
-
-                      </a>
-              </div>
-              <div class="col-sm-6 col-md-3 show-text-predhpi zoom">
-                      <a href="http://crdd.osdd.net/raghava/rslpred/" target="_blank" class="sabbi-events-link">
-                              <article class="sabbi-events-item tools-container container article-container" style="width: 200px; height: 220px;">
-                                      <figure>
-                                          <img class="sabbi-events-img img-responsive" style=" height: 150px; padding-block-start: 20px;" src="assets/img/tools/rslpred.PNG" alt="thompson">
-                                          <figcaption>
-                                              <h2 class="sabbi-events-title font-md__x">RSLpredP</h2>
-                                              <div class="middle">
-                                                      <div class="text">Details</div>
-                                              </div>
-                                          </figcaption>
-                                      </figure>
-
-                              </article><!-- /.sabbi-events-item -->
-
-                          </a>
-              </div>
-              <div class="col-sm-6 col-md-3 show-text-predhpi zoom">
-                      <a href="http://bioinfo.usu.edu/PLpred" target="_blank" class="sabbi-events-link">
-                                  <article class="sabbi-events-item tools-container container article-container" style="width: 200px; height: 220px;">
-                                          <figure>
-                                              <img class="sabbi-events-img img-responsive" style="height: 150px; padding-block-start: 20px;" src="assets/img/tools/plpred.PNG" alt="thompson">
-                                              <figcaption>
-                                                  <h2 class="sabbi-events-title font-md__x">PLpred</h2>
-                                                  <div class="middle">
-                                                          <div class="text">Details</div>
-                                                  </div>
-                                              </figcaption>
-                                          </figure>
-
-                                  </article><!-- /.sabbi-events-item -->
-
-                          </a>
-              </div>
-              </div>
-          </div><!-- /.events_post-sagment -->
-          <div class="events_post-sagment tabcontent title-card" id="DB" >
-                  <header class="fancy-header">
-              <h4 class="" style="padding: 20px;">Databases</h4>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 100" preserveAspectRatio="none">
-                  <circle fill="white" cx="0" cy="100" r="100" />
-                  <circle fill="white" cx="200" cy="100" r="100" />
-                </svg>
-              </header>
-              <div class="row" style="padding: 20px;">
-              <div class="col-sm-3  show-text-predhpi zoom">
-                      <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank" class="sabbi-events-link">
-                      <article class="sabbi-events-item tools-container container article-container" style="width: 200px; height: 220px;">
-                              <figure>
-                                  <img class="sabbi-events-img img-responsive" style=" height: 150px; padding-block-start: 20px;" src="assets/img/tools/greeningdb.PNG" alt="thompson">
-                                  <figcaption>
-                                      <h2 class="sabbi-events-title font-md__x">GreeningDB</h2>
-                                      <div class="middle">
-                                              <div class="text">Details</div>
-                                      </div>
-                                  </figcaption>
-                              </figure>
-
-                      </article><!-- /.sabbi-events-item -->
-
-                            </a>
-                  </div>
-              <div class="col-sm-3  show-text-predhpi zoom">
-                          <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank" class="sabbi-events-link">
-                          <article class="sabbi-events-item tools-container container article-container" style="width: 200px; height: 220px;">
-                                  <figure>
-                                      <img class="sabbi-events-img img-responsive" style=" height: 150px; padding-block-start: 20px;" src="assets/img/citSatDB.png" alt="thompson">
-                                      <figcaption>
-                                          <h2 class="sabbi-events-title font-md__x">citSATdb</h2>
-                                          <div class="middle">
-                                                  <div class="text">Details</div>
-                                          </div>
-                                      </figcaption>
-                                  </figure>
-
-                          </article><!-- /.sabbi-events-item -->
-
-                                </a>
-              </div>
-              <div class="col-sm-3  show-text-predhpi zoom">
-                  <a href="http://bioinfo.usu.edu/legumeSSRdb" target="_blank" class="sabbi-events-link">
-                  <article class="sabbi-events-item tools-container container article-container" style="width: 200px; height: 220px;">
-                          <figure>
-                              <img class="sabbi-events-img img-responsive" style=" height: 150px; padding-block-start: 20px;" src="assets/img/tools/legumeSSRdb.png" alt="thompson">
-                              <figcaption>
-                                  <h2 class="sabbi-events-title font-md__x">legumeSSRdb</h2>
-                                  <div class="middle">
-                                          <div class="text">Details</div>
-                                  </div>
-                              </figcaption>
-                          </figure>
-
-                  </article><!-- /.sabbi-events-item -->
-
-                        </a>
-      </div>
-              </div>
-
-          </div><!-- /.events_post-sagment -->
-          <div class="events_post-sagment tabcontent title-card" id="Bio">
-                  <header class="fancy-header">
-                  <h4 class="" style="padding: 20px;">Bio-Energy</h4>
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 100" preserveAspectRatio="none">
-                      <circle fill="white" cx="0" cy="100" r="100" />
-                      <circle fill="white" cx="200" cy="100" r="100" />
-                    </svg>
-                    </header>
-                  <div class="row" style="padding: 20px;">
-                      <div class="col-sm-6 col-md-3 show-text-predhpi zoom">
-                              <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank" class="sabbi-events-link">
-                          <article class="sabbi-events-item tools-container container article-container" style="width: 200px; height: 220px;">
-                                  <figure>
-                                      <img class="sabbi-events-img img-responsive" style=" height: 150px; padding-block-start: 20px;" src="assets/img/tools/lacsubpred.PNG" alt="thompson">
-                                      <figcaption>
-                                          <h2 class="sabbi-events-title font-md__x">LacSubPred</h2>
-                                          <div class="middle">
-                                                  <div class="text">Details</div>
-                                          </div>
-                                      </figcaption>
-                                  </figure>
-
-                          </article><!-- /.sabbi-events-item -->
-
-                          </a>
-                      </div>
-                  <div class="col-sm-6 col-md-3 show-text-predhpi zoom">
-                          <a href="http://bioinfo.usu.edu/ligpred" target="_blank" class="sabbi-events-link">
-                              <article class="sabbi-events-item tools-container container article-container" style="width: 200px; height: 220px;">
-                                      <figure>
-                                          <img class="sabbi-events-img img-responsive" style=" height: 150px; padding-block-start: 20px;" src="assets/img/tools/ligpred.PNG" alt="thompson">
-                                          <figcaption>
-                                              <h2 class="sabbi-events-title font-md__x">Ligpred</h2>
-                                              <div class="middle">
-                                                      <div class="text">Details</div>
-                                              </div>
-                                          </figcaption>
-                                      </figure>
-
-
-                              </article><!-- /.sabbi-events-item -->
-
-                          </a>
-                  </div>
-                  </div>
-          </div><!-- /.events_post-sagment -->
-          <div class="events_post-sagment tabcontent title-card" id="Misc">
-                  <header class="fancy-header">
-              <h4 class="" style="padding: 20px;">Miscellaneous</h4>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 100" preserveAspectRatio="none">
-                  <circle fill="white" cx="0" cy="100" r="100" />
-                  <circle fill="white" cx="200" cy="100" r="100" />
-                </svg>
-              </header>
-              <div class="row" style="padding: 20px;">
-              <div class="col-sm-6 col-md-3 show-text-predhpi zoom">
-                      <a href="http://crdd.osdd.net/raghava/rbpred/" target="_blank" class="sabbi-events-link">
-                              <article class="sabbi-events-item tools-container container article-container" style="width: 200px; height: 220px;">
-                                      <figure>
-                                          <img class="sabbi-events-img img-responsive"style=" height: 150px; padding-block-start: 20px;" src="assets/img/tools/rbpred.PNG" alt="thompson">
-                                          <figcaption>
-                                              <h2 class="sabbi-events-title font-md__x">RB-Pred</h2>
-                                              <div class="middle">
-                                                      <div class="text">Details</div>
-                                              </div>
-                                          </figcaption>
-                                      </figure>
-
-                              </article><!-- /.sabbi-events-item -->
-
-                      </a>
-              </div>
-              </div>
-      </div><!-- /.events_post-sagment -->
-
-          <!-- /.pagination_wraper -->
-      </div>
-  </section><!-- /.stage_events_post -->
 
   {% include "universal/_footer.njk" %}
   {% from "universal/_footer-scripts.njk" import scripts %}
